feat: assistant, push notifications
